# simple-2fa-next

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  SECURITY.md  biome.json  commitlint.config.js  lefthook.yml  package.json  release-please-config.json  tsconfig.json  vitest.config.ts  wdio.conf.ts
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  security_report.md
.github/workflows/: build-smoke.yml  ci.yml  commitlint.yml  nightly.yml  release.yml
planning/: m10-implementation.md  m2-implementation.md  m3-implementation.md  m4-implementation.md  m5-implementation.md  m6-implementation.md  m7-implementation.md  m8-implementation.md  m9-implementation.md
src/: App.tsx  main.tsx  router.test.ts  router.tsx
src-tauri/: Cargo.toml  deny.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: error.rs  lib.rs  main.rs  state.rs
src-tauri/src/biometric/: mod.rs
src-tauri/src/commands/: accounts.rs  biometric.rs  groups.rs  import.rs  mod.rs  sync.rs  vault.rs
src-tauri/src/crypto/: aead.rs  kdf.rs  legacy_s2fa.rs  mod.rs
src-tauri/src/db/: migrate.rs  mod.rs  repo.rs  schema.rs
src-tauri/src/importer/: export.rs  mod.rs  otpauth.rs  s2fa.rs
src-tauri/src/sync/: mod.rs  s3.rs  webdav.rs
src-tauri/src/totp/: secret.rs
src-tauri/tests/: export.rs  legacy_decrypt.rs  otpauth.rs
src/hooks/: useAccounts.test.tsx  useAccounts.ts  useGroups.test.tsx  useGroups.ts  useNow.test.ts  useNow.ts  useScreenScan.test.ts  useScreenScan.ts
src/i18n/: i18n.test.ts  index.ts
src/lib/: screenCapture.test.ts  screenCapture.ts  tauri.test.ts  (+2 more)
(+60 files in other folders)
