[package]
name = "simple-2fa-next"
version = "0.1.0"
description = "Simple 2FA Next — Modern TOTP Authenticator"
license = "MIT"
authors = []
edition = "2021"

[lib]
name = "simple_2fa_next_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
tauri-plugin-biometric = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
rusqlite = { version = "0.39", features = ["bundled"] }

# TOTP
totp-rs = { version = "5", features = ["gen_secret", "zeroize"] }
data-encoding = "2"  # Base32 decoding

# Cryptography
aes-gcm = "0.10"
argon2 = "0.5"
rand = "0.9"
hex = "0.4"
zeroize = { version = "1", features = ["derive"] }
secrecy = { version = "0.10", features = ["serde"] }

# Error handling
thiserror = "2"
url = "2"
keyring = { version = "3", features = ["apple-native", "windows-native", "linux-native"] }
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["rt", "macros"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
object_store = { version = "0.13", features = ["aws"] }


[dev-dependencies]
proptest = "1"
serde_json = "1"
wiremock = "0.6"
base64 = "0.22"

[[test]]
name = "legacy_decrypt"
path = "tests/legacy_decrypt.rs"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
